# LatencyOptimizer

./: .gitignore  CMakeLists.txt  LatencyOptimizer.ps1  README.md  admin.manifest
resources/: app.rc
src/: backup_manager.cpp  backup_manager.h  gui.cpp  gui.h  main.cpp
src/tweaks/: dpc_tweaks.cpp  dpc_tweaks.h  gpu_tweaks.cpp  gpu_tweaks.h  input_tweaks.cpp  input_tweaks.h  interrupts_tweaks.cpp  interrupts_tweaks.h  memory_tweaks.cpp  memory_tweaks.h  misc_tweaks.cpp  misc_tweaks.h  network_tweaks.cpp  network_tweaks.h  power_tweaks.cpp  power_tweaks.h  registry_tweaks.cpp  registry_tweaks.h  scheduler_tweaks.cpp  scheduler_tweaks.h  services_tweaks.cpp  services_tweaks.h  timers_tweaks.cpp  timers_tweaks.h  tweak_base.h
src/utils/: cmd_utils.cpp  cmd_utils.h  privilege_utils.cpp  privilege_utils.h  registry_utils.cpp  registry_utils.h  service_utils.cpp  service_utils.h
